--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,4 @@ export(lira_model)
 export(lira_model2)
 export(lira_score_location)
 export(predict_rf_model_cox)
+importFrom(utils,packageDescription)
