--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(autoDetectGeneIdType)
 export(isAvailable)
+export(lira_heatmap)
 export(lira_model)
 export(lira_model2)
 export(lira_score_location)
