--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(isAvailable)
 export(lira_heatmap)
 export(lira_model)
 export(lira_model2)
+export(lira_rnaseq_pipline)
 export(lira_score_location)
 export(predict_rf_model_cox)
 importFrom(utils,packageDescription)
